# Conclave-internal

./: --title  .cursorrules  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  LICENSE  PROJECT_CONVENTIONS.md  README.md  conclave-backend-meeting-bug-report.html  docker-compose.oss.yml  docker-compose.test.yml  docker-compose.websearch-test.yml  docker-compose.websearch.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.core-test  Dockerfile.cython-build  README.md  alembic.ini  conftest.py  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_aux_api_keys_docs_cost.py  0003_drop_cost_records_fk.py  0004_add_memory_tables.py  0005_add_meetings_composite_index.py  __init__.py
backend/app/: __init__.py  auth.py  auth_guard.py  config.py  context.py  db.py  db_async.py  db_legacy.py  docker_hosts.py  events.py  lazy_asyncio.py  llm_providers.py  logging_config.py  main.py  middleware.py  models.py  net_auth.py  net_auth_manager.py  network_security.py  pricing_fetcher.py  prompt_injection.py  report_layout.py  sandbox.py
backend/app/agents/: README.md  __init__.py  agent_runtime.py  bug_patterns.py  compute.proto  compute.py  feedback.py  llm.py  prompts.py  role_templates.py  roles.py  schemas.py  skills.py  task_baseline.py  trace.py  worker.py
backend/app/core/: __init__.py  exceptions.py
backend/app/dao/: __init__.py  agent_role_dao.py  db_init.py  event_dao.py  meeting_aux_dao.py  meeting_dao.py  message_dao.py  preference_dao.py  tag_dao.py
backend/app/db/: README.md  __init__.py  base.py  engine.py  factory.py  mapper.py  models.py  qdrant_store.py  redis.py  repository.py  sqlalchemy_repo.py  upsert.py  vector_store.py
backend/app/domain/: __init__.py  agent_role.py  enums.py  event_payloads.py  meeting.py  message.py  ws_messages.py
backend/app/memory/: README.md  __init__.py  models.py  profile.py  store.py
backend/app/observability/: README.md  __init__.py  audit.py  cost_tracker.py  log_bus.py  logger.py  metrics_store.py  sink.py  sinks.py
backend/app/orchestrator/: README.md  __init__.py  borrow_helpers.py  charter.py  conclusion_chain.py  context_manager.py  evidence_helpers.py  fast_path.py  instant.py  manager.py  nodes.py  phased_generation.py  produce_helpers.py  prompt_safety.py  react_loop.py  refine_loop.py  runner.py  stage_common.py  stage_planners.py  stage_reducers.py  stage_runners.py  state.py  system_prompt.py  task_graph.py
backend/app/plugins/: README.md  __init__.py
backend/app/prompts/: bug_patterns.yaml
backend/app/rag/: README.md  __init__.py  chunker.py  hyde.py  query_rewriter.py  retriever.py  store.py  tokenize.py
backend/app/routers/: __init__.py  agent_roles.py  audit_logs.py  auth.py  captcha.py  docker_hosts.py  documents.py  meetings.py  metrics.py  net_auth.py  preferences.py  regression.py  workspace.py  ws.py
backend/app/schemas/: __init__.py  agent_role.py  auth.py  captcha.py  common.py  meeting.py  net_auth.py  preferences.py  regression.py  workspace.py
backend/app/services/: key_store.py
backend/app/skills/: code_conventions.oss.yaml  code_conventions.yaml  communication_style.oss.yaml  communication_style.yaml  deliverable_quality.oss.yaml  deliverable_quality.yaml  ui_design_system.oss.yaml  ui_design_system.yaml
backend/conclave_core/: __init__.py  anchor.py  charter.py  charter_logic.py  conclusion_chain.py  conclusion_logic.py  confidence.py  evidence.py  prompts.py  roles.py  scheduler.py  setup.py  state.py  text.py
backend/docker/: setup-docker-host.sh
backend/tests/: conftest.py  run_web_search_tests.py  test_charter_anchor.py  test_compute.py  test_context_manager.py  test_core_flow.py  test_determinism.py  test_e2e.py  test_e2e_refactor.py  test_embedding_loop_safety.py  test_event_replay.py  test_evidence_fact_check.py  test_instruction_injection.py  test_key_store_import.py  test_llm_temperature.py  test_manager.py  test_meeting_sections.py  test_memory.py  test_middleware_security.py  test_net_auth_flow.py  test_observability.py  test_pricing_fetcher.py  test_produce_stage.py  test_prompt_injection.py  test_rag_hyde.py  test_rag_multi_recall.py  test_real_llm_e2e.py  test_refine_loop.py  test_regression_historical.py  test_reranker_loop_safety.py  test_role_library.py  test_role_matching.py  test_sandbox_security.py  test_scheduler.py  test_smoke.py  test_stats.py  test_tenants_api.py  test_trace_id.py  test_web_search_components.py  test_web_search_integration.py  (+1 more)
backend/web_search_service/: Dockerfile  main.py  research_agent.py
backend/workspace/: constraints.yaml
(+384 files in other folders)
