[build-system]
requires = ["setuptools>=68", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conclave-backend"
version = "0.1.0"
description = "Conclave 会议型多智能体系统后端（迭代一）"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "openai>=1.0",
    "qdrant-client>=1.7",
    "websockets>=12.0",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "psycopg2-binary>=2.9",
    "psutil>=5.9",
    "jieba>=0.42",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "conclave_core*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
# 默认启用多进程并行测试（pytest-xdist）
# -n auto: 自动按 CPU 核心数分配 worker
# --timeout=30: 单测超时 30s
# --timeout-method=thread: 线程超时（兼容 asyncio）
# 如需禁用多进程（调试单测）：pytest -p no:xdist
addopts = "-n auto --timeout=30 --timeout-method=thread"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line too long (由格式化处理)
    "B008",   # Do not perform function call in argument defaults (FastAPI Depends 需要)
    "RUF001", # ambiguous-unicode-character-string (中文字符误报)
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    "RUF009", # Do not perform function call in dataclass defaults (config.py 的 _env() 模式是故意的)
    "UP038",  # Use X | Y in isinstance (该规则已在 ruff 0.7+ 移除，元组写法完全合法)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# 渐进式严格模式：先放宽现有代码，后续逐步收紧
check_untyped_defs = false
disallow_untyped_defs = false
no_implicit_optional = false
